# robocup-2025-base-packages

./: .gitignore  99-usb-serial copy.rules  99-usb-serial.rules  LICENSE
RPLIDAR_RCUP/: CMakeLists.txt
RPLIDAR_RCUP/config/: ekf.yaml  ekf_final.yaml  joystick.yaml  mapper_params_online_async.yaml  my_robot_2d.lua  slam_config.yaml
RPLIDAR_RCUP/launch/: 2025_main.launch.py  bot.launch.py  ekf.launch.py  ekf_final_launch.py  joystick.launch.py  main.launch.py  mapping.launch.py  online_async_launch.py  sllidar_a2m8_launch.py  view_sllidar_a2m8_launch.py
RPLIDAR_RCUP/map/: map_1.yaml.pgm  map_1.yaml.yaml
RPLIDAR_RCUP/rviz/: sllidar_ros2.rviz  sllidar_ros2_final.rviz
RPLIDAR_RCUP/src/: mapping.py
barrier_tape_addition/: package.xml  setup.cfg  setup.py
barrier_tape_addition/barrier_tape_addition/: publish_box_coordinate.py  publish_map.py  tape_scan_node.py  tape_to_map_test.rviz
base_custom_interfaces/: CMakeLists.txt  package.xml
base_custom_interfaces/msg/: BoundingBox.msg
custom_interfaces/: CMakeLists.txt  package.xml
custom_interfaces/srv/: SetDepthMode.srv
interpretOdom/: package.xml  setup.cfg  setup.py
interpretOdom/config/: nav2_params.yaml  rtab_imu_ekf.yaml
interpretOdom/interpretOdom/: new_pid_controller.py  rtab_teleop.py  serial_arbiter.py  tracking_dead_wheel_odom.py  two_tracking_dead_wheel_odom.py
interpretOdom/launch/: odometry.launch.py  rtab_bot.launch.py
interpret_odom/: package.xml  setup.cfg  setup.py
interpret_odom/config/: dead_wheel_w_imu.yaml  differential_nav2_params.yaml  ekf_imu_only.yaml  lidar_filter.yaml  localization_mapper_params_online_async.yaml  mapper_params_online_async.yaml  nav2_params.yaml  rvizwodom.rviz  temp_nav_params.yaml  test_amcl.yaml
interpret_odom/interpret_odom/: serial_arbiter.py  serial_data_send_recieve_test.py  tracking_dead_wheel_odom.py
interpret_odom/launch/: hardware.launch.py  mapping.launch.py  nav2_bringup_with_collision_monitor.launch.py  nav2_start.launch.py  navigation.launch.py  navigation_support_nodes.launch.py  odometry.launch.py
laser_line_extraction_ros2/: CMakeLists.txt  package.xml
laser_line_extraction_ros2/include/laser_line_extraction_ros2/: line.hpp  line_extraction.hpp  line_extraction_ros.hpp  utilities.hpp
laser_line_extraction_ros2/launch/: line_extraction.launch.py
laser_line_extraction_ros2/msg/: LineSegment.msg  LineSegmentList.msg
laser_line_extraction_ros2/src/: line.cpp  line_extraction.cpp  line_extraction_node.cpp  line_extraction_ros.cpp
rcup_interfaces/: CMakeLists.txt  package.xml
serial_motor_demo/: setup.py
serial_motor_demo/serial_motor_demo/: 3_encoder.py  ARM.py  EKF.py  EKF_final.py  IMU_testing.py  OpenLoop_controller.py  OpenLoop_key.py  PID_Controller.py  PID_Key.py  cmd_vel_to_pwm.py  deadwheel_pid_controller.py  driver.py  dynamic_tf_broadcaster.py  fake_odom.py  gui.py  imu_to_odom.py  meccanum_drive_node.py  odom_to_base_transform.py  odometry_comparison.py  raw_odom_publisher.py  receive.py  receive_IMU.py  receive_STM.py  scan_timestamp_fixer.py  send.py  send2.py  serial.py  speedtopwm.py  stm_to_odom.py  teleop_joy.py  teleop_pwm.py  test_joy.py
serial_motor_demo_msgs/: CMakeLists.txt  package.xml
service_manager/: package.xml  setup.cfg  setup.py
service_manager/config/: common_stereo.yaml  gen.yaml
service_manager/service_manager/: zed_service.py
