<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>serial_motor_demo_msgs</name>
  <version>0.0.0</version>
  <description>ROS 2 messages for serial motor demo communication</description>

  <maintainer email="josh.newans@gmail.com">newans</maintainer>
  
  <!-- Replace TODO with the actual license type, such as BSD-3-Clause or MIT -->
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>

  <!-- This defines the group for ROS 2 interface packages -->
  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
